# alexa_led

./: Cargo.toml  Dockerfile  README.md  config.yaml  diesel.toml  docker-compose.yml
migrations/2019-02-08-205524_create_schemas/: down.sql  up.sql
migrations/2019-02-09-000120_create_users/: down.sql  up.sql
src/: db.rs  main.rs  server.rs  settings.rs
src/alexa/: request.rs
src/db/: schema.rs
src/server/: routes.rs
src/server/routes/: authenticate.rs
