[package]
name = "alexa_led"
version = "0.1.0"
authors = ["Nate Strandberg <nater540@gmail.com>"]
edition = "2018"

[dependencies]
sysfs_gpio   = "0.5"
actix        = "0.7.9"
actix-web    = "0.7.18"
bitflags     = "1.0.4"
chrono       = "0.4.6"
clap         = "2.32.0"
error-chain  = "0.12.0"
jsonwebtoken = "5.0.0"
maplit       = "1.0.1"
regex        = "1.1.0"
serde        = "1.0.85"
serde_derive = "1.0.85"
serde_json   = "1.0.37"
serde_yaml   = "0.8.8"
uuid         = "0.7.1"
config       = "0.9.2"
indoc        = "0.3"

# Logging
fern = "0.5.7"
log  = "0.4.6"
